trying to fix ios instruction alignment

--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,7 @@ th.label {
   margin: auto;
   font-size: 2rem;
   color: #ffff80;
+  min-width: 1px;
 }
 
 #title {
